--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,28 +10,22 @@ dependencies = [
     "numpy>=1.24.0",
     "requests>=2.31.0",
     "aiohttp>=3.8.0",
-    
     # Machine Learning
     "scikit-learn>=1.3.0",
     "scipy>=1.10.0",
-    
     # Data Storage
     "sqlalchemy>=2.0.0",
     "psycopg2-binary>=2.9.0",
-    
     # Data Processing
     "pyarrow>=12.0.0",
     "pyyaml>=6.0",
     "python-dateutil>=2.8.2",
-    
     # Visualization
     "matplotlib>=3.7.0",
     "seaborn>=0.12.0",
     "plotly>=5.14.0",
-    
     # FPL API
     "fpl>=0.6.0",
-    
     # Utilities
     "tqdm>=4.65.0",
     "python-dotenv>=1.0.0",
@@ -39,6 +33,7 @@ dependencies = [
     "ratelimit>=2.2.1",
     "click>=8.0.0",
     "rich>=13.0.0",
+    "streamlit>=1.49.0",
 ]
 
 [project.optional-dependencies]
